--- a/index.html
+++ b/index.html
@@ -170,14 +170,20 @@
         </div>
       </div>
       <div id="page4">
-        <h2>
-            We believe in people, until they believe in themselves again.</h2>
-            <div id="rightDiv">
-                <p>Everything we do is designed to rebuild self worth and independence, in order to break free from the cycle of disadvantage.</p>
-                <p>With every purchase you make with us, you're helping to change the course of someone's life; you're walking alongside vulnerable women as they find their way home again.</p>
+        <h2>We believe in people, until they believe in themselves again.</h2>
+        <div id="rightDiv">
+          <p>
+            Everything we do is designed to rebuild self worth and independence,
+            in order to break free from the cycle of disadvantage.
+          </p>
+          <p>
+            With every purchase you make with us, you're helping to change the
+            course of someone's life; you're walking alongside vulnerable women
+            as they find their way home again.
+          </p>
 
-                <a href="#">Shop to Support</a>
-            </div>
+          <a href="#">Shop to Support</a>
+        </div>
       </div>
       <div id="page3">
         <div class="child" id="child1">
@@ -207,77 +213,91 @@
       </div>
       <div id="page5">
         <div id="leftDiv">
-            <h2>Our Impact</h2>
-            <p>The thing is, we don't save anyone.</p>
-            <p>What we do is provide a safe space for women to change the course of their own lives.</p>
-            <p>After many years of living in crisis, abuse and complex trauma, restoring self-worth is foundational for independence. We believe that through experiences that promote love and respect, we can spark and nurture a sense of self-worth for those on the path of healing.</p>
+          <h2>Our Impact</h2>
+          <p>The thing is, we don't save anyone.</p>
+          <p>
+            What we do is provide a safe space for women to change the course of
+            their own lives.
+          </p>
+          <p>
+            After many years of living in crisis, abuse and complex trauma,
+            restoring self-worth is foundational for independence. We believe
+            that through experiences that promote love and respect, we can spark
+            and nurture a sense of self-worth for those on the path of healing.
+          </p>
 
-            <a href="#">HERE'S HOW WE DO IT</a>
+          <a href="#">HERE'S HOW WE DO IT</a>
         </div>
         <div id="rightDiv">
-            <div class="elm">
-                <img   data-scroll
-                data-scroll-speed="1" src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format" alt="">
-            </div>
-            <div class="elm">
-                <img data-scroll
-                data-scroll-speed="1" src="https://cdn.sanity.io/images/w8f1ak3c/production/84da7b8b510e006ce0ca22769d93bb6c044945f6-5504x8256.jpg/Patricia-Work-Work-Good-Stories-Two-Good-Co.jpg?rect=0,56,5504,8144&w=640&h=947&fit=min&auto=format" alt="">
-            </div>
+          <div class="elm">
+            <img
+              data-scroll
+              data-scroll-speed="1"
+              src="https://cdn.sanity.io/images/w8f1ak3c/production/943f8f43b76b4e030f41deddca1edd44170fee39-5504x8256.jpg/Christina-Maria-Jes-Lindsay-9143.jpg?fp-x=0.5&fp-y=0.5&w=640&h=947&fit=crop&crop=focalpoint&auto=format"
+              alt=""
+            />
+          </div>
+          <div class="elm">
+            <img
+              data-scroll
+              data-scroll-speed="1"
+              src="https://cdn.sanity.io/images/w8f1ak3c/production/84da7b8b510e006ce0ca22769d93bb6c044945f6-5504x8256.jpg/Patricia-Work-Work-Good-Stories-Two-Good-Co.jpg?rect=0,56,5504,8144&w=640&h=947&fit=min&auto=format"
+              alt=""
+            />
+          </div>
         </div>
       </div>
       <form id="inputContainer">
-        <input type="text" placeholder="ENTER YOUR EMAIL ADDRESS FOR GOOD">
-        <div id="underline">
-        </div>
+        <input type="text" placeholder="ENTER YOUR EMAIL ADDRESS FOR GOOD" />
+        <div id="underline"></div>
       </form>
       <div id="footer">
         <div id="upperDiv">
-        <div id="left">
+          <div id="left">
             <h2>CONNECT WITH US</h2>
             <h4>Facebook</h4>
             <h4>Instagram</h4>
             <h4>Twitter</h4>
             <h4>LinkedIn</h4>
             <h4>YouTube</h4>
-
-        </div>
-        <div id="center">
+          </div>
+          <div id="center">
             <svg
-            width="62"
-            height="63"
-            viewBox="0 0 62 63"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-            class="go1438215768"
-            style="transform: translate(0px, 0px)"
-          >
-            <path
-              d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
-              fill="currentColor"
-            ></path>
-            <path
-              d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
-              fill="currentColor"
-            ></path>
-            <path
-              d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
-              fill="currentColor"
-            ></path>
-            <path
-              d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
-              fill="currentColor"
-            ></path>
-            <path
-              d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
-              fill="currentColor"
-            ></path>
-            <path
-              d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
-              fill="currentColor"
-            ></path>
-          </svg>
-        </div>
-        <div id="right">
+              width="62"
+              height="63"
+              viewBox="0 0 62 63"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+              class="go1438215768"
+              style="transform: translate(0px, 0px)"
+            >
+              <path
+                d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
+                fill="currentColor"
+              ></path>
+              <path
+                d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
+                fill="currentColor"
+              ></path>
+              <path
+                d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
+                fill="currentColor"
+              ></path>
+              <path
+                d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
+                fill="currentColor"
+              ></path>
+              <path
+                d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
+                fill="currentColor"
+              ></path>
+              <path
+                d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
+                fill="currentColor"
+              ></path>
+            </svg>
+          </div>
+          <div id="right">
             <h2>THE NITTY GRITTIES</h2>
             <h4>Good Things FAQs</h4>
             <h4>Good Food FAQs</h4>
@@ -285,18 +305,28 @@
             <h4>Pathways</h4>
             <h4>Careers</h4>
             <h4>Wholesale</h4>
-        </div>
+          </div>
         </div>
         <div id="lowerDiv">
-            <div>
-                <h4>© Two Good Co. 2024</h4>
-                <h4>Terms of Use</h4>
-                <h4>Privacy Policy</h4>
-            </div>
-            <p>We are proud and privileged to have our home on this land, and to be able to continue the long tradition of community coming together around food, begun thousands of years ago by First Nations peoples. As we stand together on this unceded land, we acknowledge our First Nations people, are the original custodians of this land, and we recognise their deep connection to land, water, sky and community which continues today. We pay our deep respects to community elders, past, present and emerging, for they hold the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples. Always was, always will be Aboriginal land.</p>
+          <div>
+            <h4>© Two Good Co. 2024</h4>
+            <h4>Terms of Use</h4>
+            <h4>Privacy Policy</h4>
+          </div>
+          <p>
+            We are proud and privileged to have our home on this land, and to be
+            able to continue the long tradition of community coming together
+            around food, begun thousands of years ago by First Nations peoples.
+            As we stand together on this unceded land, we acknowledge our First
+            Nations people, are the original custodians of this land, and we
+            recognise their deep connection to land, water, sky and community
+            which continues today. We pay our deep respects to community elders,
+            past, present and emerging, for they hold the memories, the
+            traditions, the culture and hopes of Aboriginal and Torres Strait
+            Islander peoples. Always was, always will be Aboriginal land.
+          </p>
         </div>
       </div>
-      
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
