cart menu animation complete

--- a/index.html
+++ b/index.html
@@ -187,6 +187,28 @@
         </div>
       </div>
     </div>
+    <div id="cartMenu">
+      <div id="upperDiv">
+        <h2>Your cart is empty.</h2>
+        <div id="button">
+          <h4>SEE All GOOD THINGS</h4>
+        </div>
+      </div>
+      <div id="lowerDiv">
+        <hr>
+        <div class="elm" >
+          <h2>CART  CART  CART  CART</h2>
+          <h2>CART  CART  CART  CART</h2>
+          <h2>CART  CART  CART  CART</h2>
+        </div>
+        <hr>
+        <div class="elm" id="elm2">
+          <h2>EMPTY  EMPTY  EMPTY  EMPTY</h2>
+          <h2>EMPTY  EMPTY  EMPTY  EMPTY</h2>
+          <h2>EMPTY  EMPTY  EMPTY  EMPTY</h2>
+        </div>
+      </div>
+    </div>
     <div id="courser"></div>
     <div id="main">
       <div id="page1">
